--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,6 +1,3 @@
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
-# For more information see: https://help.github.com/actions/language-and-framework-guides/publishing-nodejs-packages
-
 name: Publish npm package
 
 on:
@@ -29,6 +26,9 @@ jobs:
           registry-url: https://registry.npmjs.org/
       - run: yarn install --frozen-lockfile
       - run: yarn build
-      - run: yarn publish --access public
+      - run: cp package.json dist
+      - run: cp README.md dist
+      - run: cp LICENSE dist
+      - run: yarn publish dist --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
