--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "repository": "git@github.com:colonydb/anthill.git",
   "license": "MIT",
   "private": false,
-  "type": "module",
   "scripts": {
     "build": "babel src -d dist --ignore \"src/**/*.stories.js\"",
     "release": "yarn version && git push --tags && open \"https://github.com/colonydb/anthill/releases/new?tag=v$(jq '.version' package.json --raw-output)\"",
@@ -23,6 +22,7 @@
   "devDependencies": {
     "@babel/cli": "^7.14.8",
     "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
     "@storybook/addon-actions": "^6.3.7",
     "@storybook/addon-storysource": "^6.3.7",
@@ -41,6 +41,13 @@
         "@babel/preset-react",
         {
           "runtime": "automatic"
+        }
+      ],
+      [
+        "@babel/preset-env",
+        {
+          "modules": "cjs",
+          "targets": "> 2%"
         }
       ]
     ],
