--- a/package.json
+++ b/package.json
@@ -47,7 +47,15 @@
         "@babel/preset-env",
         {
           "modules": "cjs",
-          "targets": "> 2%"
+          "targets": [
+            "last 2 chrome versions",
+            "last 2 safari versions",
+            "last 2 firefox versions",
+            "last 2 edge versions",
+            "last 2 ios_saf versions",
+            "last 2 and_chr versions",
+            "last 2 samsung versions"
+          ]
         }
       ]
     ],
