--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "private": false,
   "scripts": {
     "build": "babel src -d dist --ignore \"src/**/*.stories.js\"",
-    "release": "yarn version && git push --tags && open \"https://github.com/colonydb/anthill/releases/new?tag=v$(jq '.version' package.json --raw-output)\"",
+    "release": "yarn version && git push && git push --tags && open \"https://github.com/colonydb/anthill/releases/new?tag=v$(jq '.version' package.json --raw-output)\"",
     "sketchbook:start": "webpack --config sketchbook/webpack.config.js --mode development && yarn sketchbook start sketchbook/example.json",
     "sketchbook:build": "webpack --config sketchbook/webpack.config.js --mode production && yarn sketchbook build sketchbook/example.json",
     "storybook:build": "build-storybook",
