--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -21,4 +21,4 @@ jobs:
       - run: pnpm config set "//registry.npmjs.org/:_authToken=${NPM_TOKEN}"
         env:
           NPM_TOKEN: ${{ secrets.npm_token }}
-      - run: pnpm publish dist --access public --no-git-checks
+      - run: pnpm publish --access public --no-git-checks
