--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@colonydb/anthill",
   "version": "0.2.0-1",
-  "main": "index.js",
   "repository": "git@github.com:colonydb/anthill.git",
   "license": "MIT",
   "private": false,
@@ -34,6 +33,8 @@
       "require": "./dist/*.cjs"
     }
   },
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "peerDependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
