--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -7,5 +7,5 @@
     "noUncheckedSideEffectImports": true,
     "strictNullChecks": true
   },
-  "include": ["src", "global.d.ts"]
+  "include": ["*"]
 }
