seperate health-check task

--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "fix": "turbo fix",
-    "lint": "pnpm dlx sherif && pnpm dlx knip --workspace apps/docs && turbo lint",
+    "health-check": "pnpm dlx sherif && pnpm dlx knip --workspace apps/docs --files --dependencies",
+    "lint": "turbo --log-order=grouped lint",
     "release": "git push && pnpm dlx open-cli \"https://github.com/colonydb/anthill/releases/new?tag=v$(jq '.version' ./packages/anthill/package.json --raw-output)&title=v$(jq '.version' ./packages/anthill/package.json --raw-output)\"",
-    "test": "turbo test"
+    "test": "turbo --log-order=grouped test"
   },
   "version": "0.0.0"
 }
