--- a/packages/anthill/package.json
+++ b/packages/anthill/package.json
@@ -25,6 +25,7 @@
       "import": "./dist/index.js"
     },
     "./icons": {
+      "import": "./dist/icons/index.js",
       "types": "./dist/icons/index.d.ts"
     },
     "./*.css": "./dist/*.css",
