--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -25,5 +25,5 @@ jobs:
       - run: npm install -g npm@latest
       - run: pnpm build
         working-directory: ./packages/anthill
-      - run: pnpm publish --access public --no-git-checks
+      - run: pnpm publish --access public --no-git-checks --tag=latest
         working-directory: ./packages/anthill
