--- a/packages/anthill/package.json
+++ b/packages/anthill/package.json
@@ -4,6 +4,7 @@
     "clsx": "^2.1.1",
     "dedent": "^1.5.3",
     "hast-util-to-jsx-runtime": "^2.3.6",
+    "object-path": "^0.11.8",
     "react-markdown": "^10.1.0",
     "refractor": "^5.0.0"
   },
@@ -13,6 +14,7 @@
     "@rslib/core": "^0.10.4",
     "@total-typescript/tsconfig": "^1.0.4",
     "@types/css-modules": "^1.0.5",
+    "@types/object-path": "^0.11.4",
     "@types/react": "^19.1.1",
     "@types/react-dom": "^19.1.2",
     "react": "^19.1.0",
