--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "@colonydb/anthill": "workspace:^",
     "dedent": "^1.5.3",
-    "next": "15.3.0",
+    "next": "^15.5.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "valibot": "^1.1.0"
